vendor/cargo/parameterized-macro-2.0.0/tests/fail/not_a_fn.stderr
error: expected `fn`
 --> $DIR/not_a_fn.rs:4:1
  |
4 | struct A;
  | ^^^^^^
